Closed Bug 378771 Opened 19 years ago Closed 19 years ago

Crash [@ nsSVGMarkerFrame::GetCanvasTM] when clicking in document with foreignObject in marker and caret browsing on

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Unassigned)

References

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(2 files)

Attached image testcase
See testcase, when clicking somewhere in the testcase, Mozilla crashes. You need to have caret browsing turned on. Talkback ID: TB31533598M nsSVGMarkerFrame::GetCanvasTM [mozilla/layout/svg/base/src/nssvgmarkerframe.cpp, line 105] nsSVGForeignObjectFrame::GetCanvasTM [mozilla/layout/svg/base/src/nssvgforeignobjectframe.cpp, line 455] nsSVGForeignObjectFrame::GetTMIncludingOffset [mozilla/layout/svg/base/src/nssvgforeignobjectframe.cpp, line 423] nsSVGForeignObjectFrame::FlushDirtyRegion [mozilla/layout/svg/base/src/nssvgforeignobjectframe.cpp, line 606] nsSVGForeignObjectFrame::InvalidateInternal [mozilla/layout/svg/base/src/nssvgforeignobjectframe.cpp, line 621] nsIFrame::Invalidate [mozilla/layout/generic/nsframe.cpp, line 3703] nsCaret::InvalidateRects [mozilla/layout/base/nscaret.cpp, line 1124] nsCaret::DrawAtPositionWithHint [mozilla/layout/base/nscaret.cpp, line 624] nsCaret::DrawCaret [mozilla/layout/base/nscaret.cpp, line 984] nsCaret::StartBlinking [mozilla/layout/base/nscaret.cpp, line 553] nsEventStateManager::SetContentCaretVisible [mozilla/content/events/src/nseventstatemanager.cpp, line 5081] nsEventStateManager::ResetBrowseWithCaret [mozilla/content/events/src/nseventstatemanager.cpp, line 5137] nsEventStateManager::PreHandleEvent [mozilla/content/events/src/nseventstatemanager.cpp, line 890] 0x0012eec4 0x0012eca4 table nsXPLookAndFeel::AddRef [mozilla/widget/src/xpwidgets/nsxplookandfeel.cpp, line 53] 0x08244c8b
Attachment #262790 - Flags: superreview?(roc)
Attachment #262790 - Flags: review?(roc)
Attachment #262790 - Flags: superreview?(roc)
Attachment #262790 - Flags: superreview+
Attachment #262790 - Flags: review?(roc)
Attachment #262790 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a4pre) Gecko/20070427 Minefield/3.0a4pre
Status: RESOLVED → VERIFIED
Flags: in-testsuite?
Crash Signature: [@ nsSVGMarkerFrame::GetCanvasTM]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: