Bug 378771 - crash when invalidating <foreignObject> with nondisplay parent.r+sr=roc